// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Text input Default renders correctly 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-input"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <input
    class="ecl-text-input"
    id="example-id"
    name="example-name"
    placeholder="Placeholder"
    type="text"
  />
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
</div>
`;

exports[`EC - Text input Default renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-input"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <input
    class="ecl-text-input"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-id"
    name="example-name"
    placeholder="Placeholder"
    type="text"
  />
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
</div>
`;

exports[`EC - Text input Default renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-input"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <input
    class="ecl-text-input custom-class custom-class--test"
    id="example-id"
    name="example-name"
    placeholder="Placeholder"
    type="text"
  />
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
</div>
`;

exports[`EC - Text input Disabled renders correctly 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-input"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <input
    class="ecl-text-input"
    disabled=""
    id="example-id"
    name=""
    placeholder="Placeholder"
    type="text"
  />
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
</div>
`;

exports[`EC - Text input Disabled renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-input"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <input
    class="ecl-text-input"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    disabled=""
    id="example-id"
    name=""
    placeholder="Placeholder"
    type="text"
  />
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
</div>
`;

exports[`EC - Text input Disabled renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-input"
>
  <label
    class="ecl-form-label"
    for="example-id"
  >
    Label
  </label>
  <input
    class="ecl-text-input custom-class custom-class--test"
    disabled=""
    id="example-id"
    name=""
    placeholder="Placeholder"
    type="text"
  />
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
</div>
`;

exports[`EC - Text input With error renders correctly 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-input"
>
  <label
    class="ecl-form-label ecl-form-label--invalid"
    for="example-id"
  >
    Label
  </label>
  <input
    class="ecl-text-input ecl-text-input--invalid"
    id="example-id"
    name="example-name"
    placeholder="Placeholder"
    type="text"
  />
  <div
    class="ecl-feedback-message"
  >
    Error message
  </div>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
</div>
`;

exports[`EC - Text input With error renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-input"
>
  <label
    class="ecl-form-label ecl-form-label--invalid"
    for="example-id"
  >
    Label
  </label>
  <input
    class="ecl-text-input ecl-text-input--invalid"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-id"
    name="example-name"
    placeholder="Placeholder"
    type="text"
  />
  <div
    class="ecl-feedback-message"
  >
    Error message
  </div>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
</div>
`;

exports[`EC - Text input With error renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group ecl-form-group--text-input"
>
  <label
    class="ecl-form-label ecl-form-label--invalid"
    for="example-id"
  >
    Label
  </label>
  <input
    class="ecl-text-input ecl-text-input--invalid custom-class custom-class--test"
    id="example-id"
    name="example-name"
    placeholder="Placeholder"
    type="text"
  />
  <div
    class="ecl-feedback-message"
  >
    Error message
  </div>
  <div
    class="ecl-help-block"
  >
    Help message
  </div>
</div>
`;
